k8s/apps/base/misskey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: misskey
  namespace: misskey
  labels:
    app: misskey
spec:
  type: ClusterIP
  selector:
    app: misskey
  ports:
    - name: http
      port: 3000
      targetPort: 3000
