k8s/apps/base/misskey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misskey
  namespace: misskey
  labels:
    app.kubernetes.io/name: misskey
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: mi.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: misskey
                port:
                  name: http
